Nineveh improvements - library view mode + Private collection designation
